testsuite/tests/typecheck/should_compile/tc002.alan
hello () : proc
	c : byte;
{
	   	c = 'a';
(* test haha *)
    c = '\n';
    writeString("Hello world!\n");
}
