testsuite/tests/typecheck/should_fail/tcfail008.alan
opCondErr() : proc
  i : int;
  a : int [5];
{
  if(i<5)
    writeString("yes");
  if(a<a)
    writeString("no");
  if(i!='a')
    writeString("no");
}
